apps/cilium/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  hostnames:
  - hubble-ui.camsab.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: http-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: hubble-ui
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
